--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div id="preloader" class="preloader">
 			<div class="preloader-inner">
 				<span class="preloader-logo">
-					<img src="images/logos/preloader-logo.png" alt="EOS" />
+					<img src="images/logos/logo.png" alt="EOS" />
 					<strong>Loading</strong>
 				</span>
 			</div>
@@ -131,10 +131,10 @@
 						<div class="hero-text wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
 							
 							<!-- LOGO -->
-							<img src="images/logos/hero-logo.png" alt="EOS - App Landing Page Template" class="hero-logo" />
+							<img src="images/logos/logo.png" alt="EOS - App Landing Page Template" class="hero-logo" />
 
 							<!-- TAGLINE -->
-							<h1 class="hero-title">Create Your App Landing Page in No Time with <strong>EOS</strong></h1>
+							<h1 class="hero-title">Listen to your <strong>Slack</strong> while you do awesome stuff</h1>
 
 							<!-- HERO DESCRIPTION -->
 							<p class="hero-description">An easily customized app landing page template with smooth CSS3 animations and lots of pre-defined layouts.</p>
