Change some copy

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 							<h1 class="hero-title">Listen to your <strong>Slack</strong> while you do awesome stuff</h1>
 
 							<!-- HERO DESCRIPTION -->
-							<p class="hero-description">An easily customized app landing page template with smooth CSS3 animations and lots of pre-defined layouts.</p>
+							<p class="hero-description">Free app that reads you your slack messages so you dont have to sit behind desk all the time.</p>
 
 							<!-- DOWNLOAD BUTTONS -->
 							<p class="download-buttons">
