--- a/index.html
+++ b/index.html
@@ -343,20 +343,16 @@
 					<div class="testimonials-carousel">
 						<ul class="testimonial-items owl-carousel wow fadeIn" data-wow-duration="1s">
 							<li>
-								<div class="testimonial-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in blandit sapien. Fusce euismod vulputate quam, sed fringilla lectus convallis eu. Fusce laoreet risus quis eros venenatis.</div>
-								<div class="testimonial-name">John Doe, CEO of Company Inc.</div>
+								<div class="testimonial-text">Wow, now I can wash the dishes or walk the dog while listening to my coworkers!</div>
+								<div class="testimonial-name">Me.</div>
 							</li>
 							<li>
-								<div class="testimonial-text">Fusce euismod vulputate quam, sed fringilla lectus convallis eu. Fusce laoreet risus quis eros venenatis, eu vehicula nibh condimentum. Phasellus suscipit dui fermentum eleifend suscipit.</div>
-								<div class="testimonial-name">Jane Doe, Wedding Photographer</div>
+								<div class="testimonial-text">He always seems to follow our Slack channels. I don't know how he finds the time!</div>
+								<div class="testimonial-name">My boss.</div>
 							</li>
 							<li>
-								<div class="testimonial-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in blandit sapien. Fusce euismod vulputate quam, sed fringilla lectus convallis eu. Fusce laoreet risus quis eros venenatis.</div>
-								<div class="testimonial-name">John Doe, CEO of Company Inc.</div>
-							</li>
-							<li>
-								<div class="testimonial-text">Fusce euismod vulputate quam, sed fringilla lectus convallis eu. Fusce laoreet risus quis eros venenatis, eu vehicula nibh condimentum. Phasellus suscipit dui fermentum eleifend suscipit.</div>
-								<div class="testimonial-name">Jane Doe, Wedding Photographer</div>
+								<div class="testimonial-text">That is awesome, but who will use that? I like to read on screen.</div>
+								<div class="testimonial-name">My girlriend.</div>
 							</li>
 						</ul>
 					</div>
