--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
 							<img src="images/logos/logo.png" alt="EOS - App Landing Page Template" class="hero-logo" />
 
 							<!-- TAGLINE -->
-							<h1 class="hero-title">Listen to your <strong>Slack</strong> while you do awesome stuff</h1>
+							<h1 class="hero-title">TeamParrot</h1>
 
 							<!-- HERO DESCRIPTION -->
-							<p class="hero-description">Free app that reads you your slack messages so you dont have to sit behind desk all the time.</p>
+							<p class="hero-description">Listen to your <strong>Slack</strong> while you do awesome stuff</p>
 
 							<!-- DOWNLOAD BUTTONS -->
 							<p class="download-buttons">
@@ -181,10 +181,9 @@
 				<div class="container">
 
 					<!-- SECTION HEADING -->
-					<h2 class="section-heading text-center wow fadeIn" data-wow-duration="1s">Close Up Features</h2>
+					<h2 class="section-heading text-center wow fadeIn" data-wow-duration="1s">Stop looking at your screen. Listen.</h2>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
-							<p class="wow fadeIn" data-wow-duration="1s">Use this section to showcase up to 4 core features from your app. You can include a short description for each feature block.</p>
 						</div>
 					</div>
 
@@ -194,12 +193,12 @@
 						<div class="col-md-4 col-sm-6">
 							<ul class="features-list features-list-left wow fadeInLeft" data-wow-duration="1s">
 								<li class="features-list-item">
-									<h5>Awesome Features</h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
+									<h5>5 Different voices for your coworkers.</h5>
+									<p>Now your coworkers speak in up to 5, randomly assigned heavy-accented voices.<br/>Irish, British and a South African join your channnel. Sounds like a joke? Well, it's fun.</p>
 								</li>
 								<li class="features-list-item">
-									<h5>Fully Customizable</h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
+									<h5>Autoplay mode</h5>
+									<p>You can set TeamParrot to automatically play all unread messages when you launch it. Just ask Siri to <b><i>"Open TeamParrot"</i></b> for full hands-free experience!</p>
 								</li>
 							</ul>
 						</div>
@@ -208,12 +207,12 @@
 						<div class="col-md-4 col-md-push-4 col-sm-6">
 							<ul class="features-list features-list-right wow fadeInRight" data-wow-duration="1s">
 								<li class="features-list-item">
-									<h5>SEO Friendly</h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
+									<h5>Full Slack sync</h5>
+									<p>Your read messages are marked in Slack so you can pick up where you left off. If TeamParrot reads only a portion - you will see the rest as unread in desktop or mobile app.</p>
 								</li>
 								<li class="features-list-item">
-									<h5>8 Predefined Color Schemes</h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
+									<h5>Free</h5>
+									<p>Totally, 100% free, without ads. I built this to learn React Native.</p>
 								</li>
 							</ul>
 						</div>
