--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 							<h1 class="hero-title">TeamParrot</h1>
 
 							<!-- HERO DESCRIPTION -->
-							<p class="hero-description">Listen to your Slack< while you do <strong>awesome stuff.</strong></p>
+							<p class="hero-description">Listen to your Slack while you do <strong>awesome stuff.</strong></p>
 
 							<!-- DOWNLOAD BUTTONS -->
 							<p class="download-buttons">
