--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						</button>
 
 						<!-- NAVBAR LOGO -->
-						<a class="navbar-brand navbar-logo" href="#home"><img src="images/logos/navbar-logo.png" alt="EOS - App Landing Page Template" /></a>
+						<a class="navbar-brand navbar-logo" href="#home"><img style='width:45px;height:45px' src="images/logos/logo.png" alt="TeamParrot - Listen to your slack messages" /></a>
 					</div>
 
 					<div id="navigation" class="navbar-collapse collapse">
@@ -104,9 +104,6 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="#home">Download</a></li>
 							<li><a href="#features">Features</a></li>
-							<li><a href="#video">Watch the Video</a></li>
-							<li><a href="#pricing">Go Premium</a></li>
-						</ul>
 
 					</div>
 
