--- a/index.html
+++ b/index.html
@@ -322,15 +322,12 @@
 
 					<!-- SOCIAL MEDIA LINKS -->
 					<ul class="social-media-links wow fadeIn" data-wow-duration="1s">
-						<li><a href="http://facebook.com"><i class="fa fa-facebook"></i><span class="sr-only">Facebook</span></a>
-						<li><a href="http://twitter.com"><i class="fa fa-twitter"></i><span class="sr-only">Twitter</span></a>
-						<li><a href="http://instagram.com"><i class="fa fa-instagram"></i><span class="sr-only">Instagram</span></a>
-						<li><a href="http://pinterest.com"><i class="fa fa-pinterest"></i><span class="sr-only">Pinterest</span></a>
+						<li><a href="https://twitter.com/Parrot_nest"><i class="fa fa-twitter"></i><span class="sr-only">Twitter</span></a>
 						<li><a href="#"><i class="fa fa-envelope"></i><span class="sr-only">Email</span></a>
 					</ul>
 
 					<!-- COPYRIGHT -->
-					<div class="copyright">Copyright &copy; EOS, All rights reserved</div>
+					<div class="copyright">Copyright &copy; <a href='http://piszek.com'>Artpi</a>, All rights reserved</div>
 				</div>
 			</footer>
 
