--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
 					<!-- SOCIAL MEDIA LINKS -->
 					<ul class="social-media-links wow fadeIn" data-wow-duration="1s">
 						<li><a href="https://twitter.com/Parrot_nest"><i class="fa fa-twitter"></i><span class="sr-only">Twitter</span></a>
+						<li><a href="mailto:artur@piszek.com"><i class="fa fa-envelope"></i><span class="sr-only">Email</span></a>
 					</ul>
 
 					<!-- COPYRIGHT -->
