--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 		<!-- PAGE TITLE -->
-		<title>EOS - A Responsive Bootstrap App Landing Page</title>
+		<title>TeamParrot - listen to your Slack messages.</title>
 
 		<!-- FAVICON -->
-		<link rel="icon" href="images/favicons/favicon.ico" />
-		<link rel="apple-touch-icon" href="images/favicons/apple-touch-icon.png" />
-		<link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-touch-icon-72x72.png" />
-		<link rel="apple-touch-icon" sizes="114x114" href="images/favicons/apple-touch-icon-114x114.png" />
+		<link rel="icon" href="./favicon.ico" />
+		<link rel="apple-touch-icon" href="images/favicons/apple-touch-icon.jpeg" />
+		<link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-touch-icon-72.jpeg" />
+		<link rel="apple-touch-icon" sizes="114x114" href="images/favicons/apple-touch-icon-114.jpeg" />
 
 		<!--
 		=================================
@@ -68,7 +68,7 @@
 		<div id="preloader" class="preloader">
 			<div class="preloader-inner">
 				<span class="preloader-logo">
-					<img src="images/logos/logo.png" alt="EOS" />
+					<img src="images/logos/logo.png" alt="TeamParrot" />
 					<strong>Loading</strong>
 				</span>
 			</div>
@@ -128,7 +128,7 @@
 						<div class="hero-text wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
 							
 							<!-- LOGO -->
-							<img src="images/logos/logo.png" alt="EOS - App Landing Page Template" class="hero-logo" />
+							<img src="images/logos/logo.png" alt="TeamParrot - listen to your slack messages" class="hero-logo" />
 
 							<!-- TAGLINE -->
 							<h1 class="hero-title">TeamParrot</h1>
@@ -323,7 +323,7 @@
 					<!-- SOCIAL MEDIA LINKS -->
 					<ul class="social-media-links wow fadeIn" data-wow-duration="1s">
 						<li><a href="https://twitter.com/Parrot_nest"><i class="fa fa-twitter"></i><span class="sr-only">Twitter</span></a>
-						<li><a href="mailto:artur@piszek.com"><i class="fa fa-envelope"></i><span class="sr-only">Email</span></a>
+						<li><a href="mailto:artur@"><i class="fa fa-envelope"></i><span class="sr-only">Email</span></a>
 					</ul>
 
 					<!-- COPYRIGHT -->
