--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8" />
 
 		<!-- METADATA -->
-		<meta name="description" content="A Responsive Bootstrap App Landing Page Template" />
-		<meta name="keywords" content="EOS, Bootstrap, Landing page, Template, App, Mobile, Android, iOS" />
-		<meta name="author" content="David Rozando" />
+		<meta name="description" content="TeamParrot - an free app that reads you your slack messages" />
+		<meta name="keywords" content="Slack, Out loud, Voice, Podcast, handsfree, audiobook, speech, texttospeech, tts, siri, synthesis" />
+		<meta name="author" content="Artur Piszek" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 		<!-- PAGE TITLE -->
