--- a/index.html
+++ b/index.html
@@ -233,15 +233,15 @@
 						<div class="col-md-7">
 
 							<!-- SECTION HEADING -->
-							<h2 class="section-heading wow fadeIn" data-wow-duration="1s">A Long Description</h2>
-							<p class="wow fadeIn" data-wow-duration="1s">Describe your mobile app in even longer paragraphs. You might include a nice icon list on this section too. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin. Quisque convallis nec justo sed consectetur. Duis convallis nunc quis arcu sollicitudin iaculis. <a href="#">Nunc id libero malesuada</a> arcu porta tempus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut vestibulum, nunc eget sollicitudin euismod, erat risus tempor augue, eu vulputate nibh lorem in leo.</p>
+							<h2 class="section-heading wow fadeIn" data-wow-duration="1s">Why did you build this?</h2>
+							<p class="wow fadeIn" data-wow-duration="1s">I work in a distributed company so every day brings a fresh wall of scrollback to go through. Keeping with every channnel is not possible, but even getting a vague sense of what's going on can help a lot. Being an optimization afficionado ( I hear that's what we call weirdos now ), I like to squeze as much as possible in every minute. Now I can listen to my coworkers whil driving, having a walk or washing the dishes. Plus I really want to learn React Native ( the underlying technology ).</p>
 
 							<!-- ICON LIST -->
 							<ul class="list-with-icons wow fadeIn" data-wow-duration="1s">
-								<li><i class="icon-action-redo"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-								<li><i class="icon-arrow-right"></i>Pellentesque dapibus leo mattis metus condimentum sollicitudin.</li>
-								<li><i class="icon-layers"></i>Quisque convallis nec justo sed consectetur.</li>
-								<li><i class="icon-bell"></i>Duis convallis nunc quis arcu sollicitudin iaculis. Nunc id libero malesuada arcu porta tempus.</li>
+								<li><i class="fa fa-car"></i>Now I can listen to Slack while I drive</li>
+								<li><i class="fa fa-volume-up"></i>My coworkers now have randomly-assigned voice. I find it funny.</li>
+								<li><i class="fa fa-comments-o"></i>I work from home and I can get the watercooler chatter this way. It's sad and comforting at the same time.</li>
+								<li><i class="fa fa-check-circle"></i>Try it!</li>
 							</ul>
 
 						</div>
