--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
 
 		<!-- WEB FONTS -->
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic" />
+		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic" />
 
 		<!-- ICON FONTS -->
 		<link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -250,7 +250,6 @@
 						<div class="col-md-5 text-center">
 
 							<img src="images/contents/description-phone-back.png" class="description-image phone-image-double phone-image-left wow fadeInRight" alt="" data-wow-duration="1s" data-wow-delay="0.5s" />
-							<img src="images/contents/description-phone-front.png" class="description-image phone-image-double phone-image-right phone-image-front wow fadeInRight" alt="" data-wow-duration="1s" data-wow-delay="1.5s" />
 
 						</div>
 					</div>
