Social media meta

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 
 		<!-- METADATA -->
-		<meta name="description" content="TeamParrot - an free app that reads you your slack messages" />
+		<meta name="description" content="TeamParrot - free app that reads you your slack messages" />
 		<meta name="keywords" content="Slack, Out loud, Voice, Podcast, handsfree, audiobook, speech, texttospeech, tts, siri, synthesis" />
 		<meta name="author" content="Artur Piszek" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -17,6 +17,19 @@
 		<link rel="apple-touch-icon" href="images/favicons/apple-touch-icon.jpeg" />
 		<link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-touch-icon-72.jpeg" />
 		<link rel="apple-touch-icon" sizes="114x114" href="images/favicons/apple-touch-icon-114.jpeg" />
+
+		<!-- Twitter Card data -->
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:site" content="@parrot_nest">
+		<meta name="twitter:title" content="TeamParrot - listen to your slack messages">
+		<meta name="twitter:description" content="TeamParrot is an app that reads your slack messages out loud. You can walk your dog, wash dishes or drive and still catch up on your coworkers">
+		<meta name="twitter:creator" content="@artpi">
+		<meta name="twitter:image" content="images/contents/hero-phone.png">
+
+		<!-- Open Graph data -->
+		<meta property="og:title" content="TeamParrot - listen to your slack messages" />
+		<meta property="og:description" content="TeamParrot is an app that reads your slack messages out loud. You can walk your dog, wash dishes or drive and still catch up on your coworkers" /> 
+		<meta property="fb:admins" content="785104392" />
 
 		<!--
 		=================================
