--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
 							<!-- SECTION HEADING -->
 							<h2 class="section-heading wow fadeIn" data-wow-duration="1s">Why did you build this?</h2>
-							<p class="wow fadeIn" data-wow-duration="1s">I work in a distributed company so every day brings a fresh wall of scrollback to go through. Keeping with every channnel is not possible, but even getting a vague sense of what's going on can help a lot. Being an optimization afficionado ( I hear that's what we call weirdos now ), I like to squeze as much as possible in every minute. Now I can listen to my coworkers whil driving, having a walk or washing the dishes. Plus I really want to learn React Native ( the underlying technology ).</p>
+							<p class="wow fadeIn" data-wow-duration="1s">I work in a distributed company so every day brings a fresh wall of scrollback to go through. Keeping with every channnel is not possible, but even getting a vague sense of what's going on can help a lot. Being an optimization afficionado ( I hear that's what we call weirdos now ), I like to squeze as much as possible in every minute. Now I can listen to my coworkers while driving, having a walk or washing the dishes. Plus I really want to learn React Native ( the underlying technology ).</p>
 
 							<!-- ICON LIST -->
 							<ul class="list-with-icons wow fadeIn" data-wow-duration="1s">
