Links and download buttons

--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
 							<!-- DOWNLOAD BUTTONS -->
 							<p class="download-buttons">
 								<!-- APP STORE DOWNLOAD -->
-								<a href="#please-edit-this-link" class="btn btn-app-download btn-ios">
+								<a href="https://itunes.apple.com/us/app/teamparrot-listen-to-your/id1148185584" class="btn btn-app-download btn-primary">
 									<i class="fa fa-apple"></i>
 									<strong>Download App</strong> <span>from App Store</span>
 								</a>
 								<!-- PLAY STORE DOWNLOAD -->
-								<a href="#please-edit-this-link" class="btn btn-app-download btn-primary">
+								<a href="#please-edit-this-link" class="btn btn-app-download btn-ios">
 									<i class="fa fa-android"></i>
 									<strong>Download App</strong> <span>from Play Store</span>
 								</a>
@@ -316,12 +316,12 @@
 					<!-- DOWNLOAD BUTTONS -->
 					<p class="download-buttons wow fadeIn" data-wow-duration="1s">
 						<!-- APP STORE DOWNLOAD -->
-						<a href="#please-edit-this-link" class="btn btn-app-download btn-ios">
+						<a href="#https://itunes.apple.com/us/app/teamparrot-listen-to-your/id1148185584" class="btn btn-app-download btn-primary">
 							<i class="fa fa-apple"></i>
 							<strong>Download App</strong> <span>from App Store</span>
 						</a>
 						<!-- PLAY STORE DOWNLOAD -->
-						<a href="#please-edit-this-link" class="btn btn-app-download btn-primary">
+						<a href="#please-edit-this-link" class="btn btn-app-download btn-ios">
 							<i class="fa fa-android"></i>
 							<strong>Download App</strong> <span>from Play Store</span>
 						</a>
