--- a/index.html
+++ b/index.html
@@ -305,6 +305,43 @@
 
 			<!--
 			=================================
+			SUBSCRIBE SECTION
+			=================================
+			-->
+			<section id="subscribe" class="subscribe-section section section-inverse-color parallax-background" data-stellar-background-ratio="0.4">
+
+				<!-- BACKGROUND OVERLAY -->
+				<div class="black-background-overlay"></div>
+
+				<div class="container">
+
+					<!-- SECTION HEADING -->
+					<h2 class="section-heading text-center wow fadeIn" data-wow-duration="1s">Subscribe to TeamParrot Voice</h2>
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 text-center">
+							<p class="wow fadeIn" data-wow-duration="1s">Android app release, Our engineering story, information about updates - we will ping you with 100% no spam guarantee.</p>
+						</div>
+					</div>
+
+					<!-- SUBSCRIBE FORM -->
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3">
+							<form action="//piszek.us14.list-manage.com/subscribe/post?u=c4f26febd325238e7ae9e5a2c&amp;id=a32b6dd27c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" method="post" id="subscribe-form" class="subscribe-form wow fadeIn" data-wow-duration="1s" role="form">
+								<div class="form-validation alert"><!-- Validation Message here --></div>
+								<div class="form-group subscribe-form-input">
+									<input type="email" name="EMAIL" id="subscribe-form-email" class="subscribe-form-email form-control form-control-lg" placeholder="Enter your email address" autocomplete="off" />
+    								<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_c4f26febd325238e7ae9e5a2c_a32b6dd27c" tabindex="-1" value=""></div>
+									<input type="submit" class="subscribe-form-submit btn btn-black btn-lg" data-loading-text="Loading..." value="Subscribe" name="subscribe">
+								</div>
+							</form>
+						</div>
+					</div>
+
+				</div>
+			</section>
+
+			<!--
+			=================================
 			FOOTER SECTION
 			=================================
 			-->
