--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="#home">Download</a></li>
 							<li><a href="#features">Features</a></li>
+							<li><a href="#subscribe">Subscribe</a></li>
 
 					</div>
 
