App store links to subscribe

--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
 							<!-- DOWNLOAD BUTTONS -->
 							<p class="download-buttons">
 								<!-- APP STORE DOWNLOAD -->
-								<a href="https://itunes.apple.com/us/app/teamparrot-listen-to-your/id1148185584" class="btn btn-app-download btn-primary">
+								<a href="#subscribe" class="btn btn-app-download btn-primary">
 									<i class="fa fa-apple"></i>
-									<strong>Download App</strong> <span>from App Store</span>
+									<strong>Let me know</strong> <span>when app is in App Store</span>
 								</a>
 								<!-- PLAY STORE DOWNLOAD -->
-								<a href="#please-edit-this-link" class="btn btn-app-download btn-ios">
+								<a href="#subscribe" class="btn btn-app-download btn-ios">
 									<i class="fa fa-android"></i>
-									<strong>Download App</strong> <span>from Play Store</span>
+									<strong>Let me know</strong> <span>when app is in Play Store</span>
 								</a>
 								<!-- WINDOWS PHONE STORE DOWNLOAD -->
 								<!--<a href="#please-edit-this-link" class="btn btn-app-download btn-windows-phone">
@@ -354,15 +354,15 @@
 					<!-- DOWNLOAD BUTTONS -->
 					<p class="download-buttons wow fadeIn" data-wow-duration="1s">
 						<!-- APP STORE DOWNLOAD -->
-						<a href="#https://itunes.apple.com/us/app/teamparrot-listen-to-your/id1148185584" class="btn btn-app-download btn-primary">
-							<i class="fa fa-apple"></i>
-							<strong>Download App</strong> <span>from App Store</span>
-						</a>
-						<!-- PLAY STORE DOWNLOAD -->
-						<a href="#please-edit-this-link" class="btn btn-app-download btn-ios">
-							<i class="fa fa-android"></i>
-							<strong>Download App</strong> <span>from Play Store</span>
-						</a>
+								<a href="#subscribe" class="btn btn-app-download btn-primary">
+									<i class="fa fa-apple"></i>
+									<strong>Let me know</strong> <span>when app is in App Store</span>
+								</a>
+								<!-- PLAY STORE DOWNLOAD -->
+								<a href="#subscribe" class="btn btn-app-download btn-ios">
+									<i class="fa fa-android"></i>
+									<strong>Let me know</strong> <span>when app is in Play Store</span>
+								</a>
 						<!-- WINDOWS PHONE STORE DOWNLOAD -->
 						<!--<a href="#please-edit-this-link" class="btn btn-app-download btn-windows-phone">
 							<i class="fa fa-windows"></i>
