--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
 				<div class="container">
 
 					<!-- SECTION HEADING -->
-					<h2 class="section-heading text-center wow fadeIn" data-wow-duration="1s">Subscribe to TeamParrot Voice</h2>
+					<h2 class="section-heading text-center wow fadeIn" data-wow-duration="1s">Subscribe for early access and engineering story.</h2>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
-							<p class="wow fadeIn" data-wow-duration="1s">Android app release, Our engineering story, information about updates - we will ping you with 100% no spam guarantee.</p>
+							<p class="wow fadeIn" data-wow-duration="1s">I will personally email you when app is in App Store(s). I also plan to share full React Native engineering story, so stay tuned !</p>
 						</div>
 					</div>
 
