--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
 							<!-- DOWNLOAD BUTTONS -->
 							<p class="download-buttons">
 								<!-- APP STORE DOWNLOAD -->
-								<a href="#subscribe" class="btn btn-app-download btn-primary">
+								<a href="https://itunes.apple.com/us/app/teamparrot-listen-to-your/id1148185584?ls=1&mt=8" class="btn btn-app-download btn-primary">
 									<i class="fa fa-apple"></i>
-									<strong>Let me know</strong> <span>when app is in App Store</span>
+									<strong>Download</strong> <span>in Apple AppStore</span>
 								</a>
 								<!-- PLAY STORE DOWNLOAD -->
 								<a href="#subscribe" class="btn btn-app-download btn-ios">
